src/widgets/snapshots/tvision__widgets__button__tests__snapshot_default_active.snap
---
source: src/widgets/button.rs
assertion_line: 596
expression: render(&mut b)
---
size: 10x2
cursor: hidden
text:
|    OK   ▄|
|  ▀▀▀▀▀▀▀▀|
attr:
|abbbbbbbba|
|aaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(11) bg=BIOS(2)
